fix global swagger annotations
